<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp"
    app:cardUseCompatPadding="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_tour"
            android:layout_width="123dp"
            android:layout_height="123dp"
            android:src="@drawable/nghinhphong"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="6dp"
                android:textColor="#354C6D"
                android:text="@string/app_name"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="6dp"
                android:textColor="#354C6D"
                android:text="@string/tour_description"
                android:textAlignment="center"
                />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="6dp"
                android:textColor="#3987D6"
                android:text="@string/tour_price"
                android:textAlignment="center"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>