<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            >

            <ImageView
                android:id="@+id/img_tour"
                android:layout_width="143dp"
                android:layout_height="143dp"
                android:scaleType="centerCrop"
                android:src="@drawable/nghinhphong" />
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="6dp"
                android:textColor="#3987D6"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textStyle="bold"

                />
            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="6dp"
                android:textColor="#354C6D"
                android:text="@string/tour_description"
                android:textAlignment="center"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="6dp"
                android:textColor="@color/orange"
                android:text="@string/tour_price"
                android:textAlignment="center"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/tour_status"
                    android:textColor="@color/red_orange"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="50dp"
                    android:layout_height="30dp"
                    android:background="@drawable/intro_background">

                    <TextView
                        android:id="@+id/tv_btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hủy"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>