<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="100dp"
        android:layout_height="10dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/swipe_down"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thông tin liên hệ"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:textColor="#52585C" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/required_name_hint"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="Giới tính"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="30dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_Male"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="Nam" />

            <RadioButton
                android:id="@+id/rdb_Femail"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Nữ" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/required_phonenumber_hint"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/black"
            android:layout_marginBottom="5dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/required_email_hint"
            app:hintTextColor="@color/black"
            app:endIconMode="clear_text"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxBackgroundColor="@android:color/white"
            app:boxStrokeColor="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Số lượng khách"
                android:textColor="#52585C"
                android:textSize="20sp"
                android:paddingTop="10dp"
                android:textAlignment="center"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:boxBackgroundColor="@android:color/white"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp"
                app:boxStrokeColor="@color/black"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/btn_complete"
                android:text="Hoàn tất"
                android:backgroundTint="@color/orange"
                android:layout_gravity="center_horizontal"
                />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/call_advise"
            android:textColor="#949494"
            android:textAlignment="center"
            android:textStyle="italic"/>

    </LinearLayout>
</LinearLayout>
